ck editor, spacing fixes

--- a/app/javascript/stylesheets/style.scss
+++ b/app/javascript/stylesheets/style.scss
@@ -37,12 +37,6 @@ $sidebar-mobile-width: 60%;
   padding-right: 1em;
 }
 
-
-.container-fluid footer {
-  margin-left: -15px;
-  margin-right: -15px;
-}
-
 #planotoast {
   position: absolute;
   right: 5px;
